--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lia.lgbt-out"]
 	path = lia.lgbt-out
-	url = git@github.com:hyperel/lia.lgbt-out.git
+	url = git@github.com:hyperbel/lia.lgbt-out.git
